<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvNewVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download_version"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/theme_background"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvDownloadTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/download"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center">

        <com.mikhaellopez.circularprogressbar.CircularProgressBar
            android:id="@+id/progressBar"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            app:cpb_background_progressbar_color="@color/gray"
            app:cpb_background_progressbar_width="7dp"
            app:cpb_progressbar_color="@color/theme_background"
            app:cpb_progressbar_width="14dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:gravity="bottom"
        android:visibility="gone">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/theme_background"
            android:padding="10dp"
            android:text="@string/btnCancel"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>


</LinearLayout>