<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ktm.ab.Activites.LoginActivity">

    <include layout="@layout/action_bar_registration" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:gravity="center">

        <TextView
            android:id="@+id/stepInfoView"
            style="@style/step_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="40dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp"
            android:text="@string/mobileSignUp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6">


        <RelativeLayout
            android:id="@+id/number_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/number_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:paddingLeft="40dp">


                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@drawable/phone_1x"
                    android:padding="50dp" />


                <EditText
                    android:id="@+id/et_country_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="25dp"
                    android:clickable="false"
                    android:focusable="false"
                    android:gravity="center"
                    android:inputType="text"
                    android:text="@string/india_code"
                    android:textColorHint="@color/grey" />

                <EditText
                    android:id="@+id/et_phone_no"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:ems="11"
                    android:focusable="true"
                    android:gravity="left"
                    android:hint="@string/mobile_number"
                    android:inputType="number"
                    android:maxLength="10"
                    android:paddingLeft="5dp"
                    android:text=""
                    android:textColorHint="@color/grey" />


            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
